--- a/teamcostco/src/main/resources/static/css/common/header.css
+++ b/teamcostco/src/main/resources/static/css/common/header.css
@@ -1,128 +1,37 @@
 header {
     display: flex;
     flex-direction: column;
-    width: calc(100% - 200px);
-    border-bottom: var(--border-line);
+    background-color: #99f;
 }
+
 .top-header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 10px;
-    background-color: var(--background-color);
-}
-.under-header {
-    display: flex;
-    padding: 10px 20px;
-    flex-direction: row;
-    word-spacing: 5px;
-    background-color: var(--background-color);
-}
-.header-left h1 {
-    padding: 10px;
-    margin: 0;
-    font-size: 24px;
-}
-.breadcrumb {
-    font-size: 14px;
-    color: #666;
-}
-.header-right {
-    display: flex;
-    align-items: center;
+    border-bottom: 1px solid #ccf;
+    padding:10px 0;
+    color:white;
 }
 
-.shop-dropdown {
-    position: relative;
-    margin-right: 20px;
-}
-
-.dropdown-btn {
-    background: var(--background-color);
-    border: none;
-    padding: 8px 12px;
-    cursor: pointer;
-    border-radius: 4px;
-}
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: var(--background-color);
-    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-    min-width: 160px;
-    z-index: 1;
-    margin-top: 10px;
-    border-radius: 4px;
-}
-.dropdown-content a {
-    color: var(--text-color);
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-.dropdown-content a:hover {
-    background-color: #F1F1F1;
-}
-.shop-dropdown:hover .dropdown-content {
-    display: block;
-}
-.notification-icon {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 40px;
-    height: 40px;
-    position: relative;
-    font-size: 24px;
-    cursor: pointer;
-    margin-right:15px;
-}
-.notifications {
-    display: none;
-    position: absolute;
-    right: 0;
-    top: 30px;
-    background-color: var(--background-color);
-    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-    min-width: 200px;
-    z-index: 1;
-    border-radius: 4px;
-    padding: 10px;
-}
-.notifications p {
-    margin: 0;
-    padding: 8px 12px;
-    border-bottom: var(--border-line);
-}
-.notifications p:last-child {
-    border-bottom: none;
-}
-.notification-icon:hover .notifications {
-    display: block;
-}
-.profile {
+.bottom-header {
     display:flex;
     flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
-    width: 100px;
     height: 40px;
-    margin-right: 15px;
 }
 
-#user_name{
-    margin-right:10px;
+.header-left h1 {
+    padding: 0 10px;
+    margin: 0;
+    font-size: 24px;
 }
-.profile-pic {
-    width: 40px;
-    height: auto;
-    border-radius: 50%;
-    cursor: pointer;
+
+.header-left{
+    flex:1;
 }
-.fa-bell {
-    color: #546FF0;
-}
-.path-separator {
-    padding: 0 5px;
+
+.header-right {
+    width:100px;
+    display: flex;
+    align-items: center;
 }
