--- a/teamcostco/src/main/resources/templates/index.html
+++ b/teamcostco/src/main/resources/templates/index.html
@@ -6,57 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title th:text="${(pageTitle ?: 'No-Title')}"></title>
     <link rel="stylesheet" href="/css/common/styles.css">
+    <link rel="stylesheet" href="/css/component/category_header_bar.css">
     <link rel="stylesheet" th:href="@{/css/common/header.css}">
-    <link rel="stylesheet" th:href="@{/css/common/navigationbar.css}">
-    <link rel="stylesheet" th:href="@{/css/common/theme.css}">
-    <link rel="stylesheet" th:href="@{/css/component/filter.css}">
-    <link rel="stylesheet" th:href="@{/css/component/search.css}">
-    <link rel="stylesheet" th:href="@{/css/component/notification.css}">
     <script th:src="@{/js/tinymce/tinymce.js}"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script th:src="@{/js/common/theme.js}"></script>
-    <th:block th:if="${pageDetail != null}">
-        <script th:src="@{/js/component/pagination_nav.js}"></script>
-    </th:block>
     <link rel="preload" href="/fonts/Material_Symbols_Outlined.woff2" as="font" type="font/woff2"
         crossorigin="anonymous">
-
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
     <th:block th:if="${cssFiles != null}">
         <th:block th:each="cssFile : ${cssFiles}">
             <link rel="stylesheet" th:href="@{${cssFile}}" />
         </th:block>
     </th:block>
-    <th:block th:if="${pageDetail != null}">
-        <link rel="stylesheet" th:href="@{/css/component/pagination_nav.css}">
-    </th:block>
 </head>
 
 <body>
     <div class="container">
-        <div th:replace="~{common/navigationbar::nav}"></div>
         <div th:replace="~{common/header::header}"></div>
         <main>
             <div th:replace="~{${uri}}"></div>
         </main>
     </div>
-    <script th:src="@{/js/common/navigationbar.js}"></script>
     <script th:src="@{/js/common/header.js}"></script>
-    <script th:src="@{/js/common/main.js}"></script>
-    <script th:src="@{/js/component/search.js}"></script>
-    <script th:src="@{/js/component/filter.js}"></script>
     <th:block th:if="${jsFiles != null}">
         <th:block th:each="jsFile : ${jsFiles}">
             <script th:src="@{${jsFile}}"></script>
         </th:block>
     </th:block>
-
-    <div class="notification-container"></div>
-
-    <script th:src="@{/js/component/notification.js}"></script>
 </body>
 
 </html>
