--- a/teamcostco/src/main/resources/templates/index.html
+++ b/teamcostco/src/main/resources/templates/index.html
@@ -25,6 +25,7 @@
         <div th:replace="~{common/header::header}"></div>
         <main>
             <div th:replace="~{${uri}}"></div>
+            
         </main>
     </div>
     <script th:src="@{/js/common/header.js}"></script>
@@ -33,6 +34,30 @@
             <script th:src="@{${jsFile}}"></script>
         </th:block>
     </th:block>
+    <div>
+        <ul>
+            <li>"test"</li>
+            <li>"test"</li>
+            <li>"test"</li>
+            <li>"test"</li>
+            <li>"test"</li>
+            <li>"test"</li>
+            <li>"test"</li>
+            <li>"test"</li>
+            <li>"test"</li>
+            <li>"test"</li>
+            <li>"test"</li>
+            <li>"test"</li>
+            <li>"test"</li>
+            <li>"test"</li>
+            <li>"test"</li>
+            <li>"test"</li>
+            <li>"test"</li>
+            <li>"test"</li>
+            <li>"test"</li>
+            <li>"test"</li>
+        </ul>
+    </div>
 </body>
 
 </html>
