--- a/teamcostco/src/main/resources/static/css/component/filter.css
+++ b/teamcostco/src/main/resources/static/css/component/filter.css
@@ -1,174 +1,9 @@
-:root {
-    --filter-text-color: white;
+.filter_wrap{
+    width:200px;
+    height: 500px;
+    border:1px solid red;
 }
 
-[data-theme='light'] {
-    --filter-text-color: black;
-}
-
-#active-filters {
-    display:flex;
-    flex-direction: row;
-    gap:10px;
-    width:100%;
-}
-
-.filter-block {
-    display:flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    border:var(--border-line);
-    border-radius: 3px;
-    padding:5px;
-    height: 30px;
-    margin-top:10px;
-    gap:10px;
-    font-size:12px;
-    background-color: var(--button-background-color);
-}
-
-.remove-filter{
-    font-weight: bold;
-    border:none;
-    background-color: transparent;
-    cursor: pointer;
-}
-
-#filter_apply {
-    cursor: pointer;
-}
-
-#filter_area {
-    width: 100px;
-    height: 30px;
-    border-radius: 3px;
-    margin-right: auto;
-}
-
-
-#filter_btn {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100px;
-    height: 100%;
-    cursor: pointer;
-}
-
-#filter_icon {
-    font-size: 16px;
-    margin-right: 5px;
-}
-
-
-#filter_options {
-    position: absolute;
-    width: auto;
-    height: auto;
-    top: 40px;
-    border-radius: 3px;
-    border: var(--border-line);
-    padding: 10px;
-    background-color: var(--filter-background-color);
-    width: 100%;
-    box-shadow: 3px 3px 5px rgba(0,0,0,0.2);
-    z-index: 2;
-}
-
-.input-group > label {
-    font-weight: bold;
-}
-
-#filter_items {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin-bottom: 30px;
-    gap:10px;
-}
-
-#filter_btn::after {
-    content: "";
-    position: absolute;
-    background-color: var(--filter-background-color);
-    top: 28px;
-    width: 100%;
-    height: 12px;
-    z-index: 3;
-    border-right: var(--border-line);
-    border-left: var(--border-line);
-}
-
-
-#filter_apply{
-    background-color: var(--filter-apply-button-background-color) !important;
-    color: var(--filter-apply-button-text-color) !important;
-}
-#filter_options.hidden {
-    display: none;
-}
-
-#filter_btn.hidden::after {
-    display: none;
-}
-
-#filter_btn {
-    position: relative;
-}
-
-#filter_btn {
-    background-color: var(--filter-background-color) !important;
-}
-
-#filter_btn.hidden {
-    background-color: var(--button-background-color) !important;
-}
-
-.flex-row-box{
-    align-items: center;
-    justify-content: center;
-    font-size:12px;
-}
-
-#filter_items input {
-    height: 30px;
-    min-width:150px;
-}
-
-#filter_items select {
-    height: 30px;
-    min-width:150px;
-}
-
-
-.input-group {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 15px;
-    gap:5px;
-    border-radius: 3px;
-    border: var(--border-line);
-    background-color: var(--filter-group-background-color);
-}
-
-[type='date']{
-    padding:0;
-    height: 30px;
-}
-
-#filter_submit_area {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-}
-
-#filter_apply {
-    width: 100px;
-    height: 30px;
-    border: var(--border-line);
-    background-color: var(--button-background-color);
-    color: var(--filter-text-color);
+.filter_main{
+    border:1px solid green;
 }
