--- a/teamcostco/src/main/resources/templates/common/header.html
+++ b/teamcostco/src/main/resources/templates/common/header.html
@@ -4,6 +4,16 @@
             <h1>TeamCostco Mall</h1>
             <nav class="breadcrumb">
             </nav>
+            <div class="search_box">
+                <form action="/search" method="GET">
+                    <input type="text" id="query" name="query" placeholder="상품검색" th:value="${param.query ?: ''}">
+                    <input type="hidden" id="page" name="page" th:value="${param.page ?: 1}">
+                    <input type="hidden" id="size" name="size" th:value="${param.size ?: 16}">
+                </form>
+                <span id="search_btn" class="material-symbols-outlined">
+                    search
+                </span>
+            </div>
         </div>
         <div class="header-right">
             <div class="icon-box">
@@ -21,5 +31,5 @@
     </div>
     <div class="bottom-header">
         <div th:replace="~{/component/category_header_bar}">
-    </div>
+        </div>
 </header>
