--- a/teamcostco/src/main/resources/templates/index.html
+++ b/teamcostco/src/main/resources/templates/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title th:text="${(pageTitle ?: 'No-Title')}"></title>
+    <link rel="stylesheet" href="/fonts/Material_Symbols_Outlined.woff2">
     <link rel="stylesheet" href="/css/common/styles.css">
     <link rel="stylesheet" href="/css/component/category_header_bar.css">
     <link rel="stylesheet" th:href="@{/css/common/header.css}">
     <script th:src="@{/js/tinymce/tinymce.js}"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <link rel="preload" href="/fonts/Material_Symbols_Outlined.woff2" as="font" type="font/woff2"
-        crossorigin="anonymous">
+
+
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <th:block th:if="${cssFiles != null}">
         <th:block th:each="cssFile : ${cssFiles}">
@@ -25,7 +26,7 @@
         <div th:replace="~{common/header::header}"></div>
         <main>
             <div th:replace="~{${uri}}"></div>
-            
+
         </main>
     </div>
     <script th:src="@{/js/common/header.js}"></script>
@@ -34,30 +35,6 @@
             <script th:src="@{${jsFile}}"></script>
         </th:block>
     </th:block>
-    <div>
-        <ul>
-            <li>"test"</li>
-            <li>"test"</li>
-            <li>"test"</li>
-            <li>"test"</li>
-            <li>"test"</li>
-            <li>"test"</li>
-            <li>"test"</li>
-            <li>"test"</li>
-            <li>"test"</li>
-            <li>"test"</li>
-            <li>"test"</li>
-            <li>"test"</li>
-            <li>"test"</li>
-            <li>"test"</li>
-            <li>"test"</li>
-            <li>"test"</li>
-            <li>"test"</li>
-            <li>"test"</li>
-            <li>"test"</li>
-            <li>"test"</li>
-        </ul>
-    </div>
 </body>
 
 </html>
