--- a/teamcostco/src/main/resources/static/css/common/styles.css
+++ b/teamcostco/src/main/resources/static/css/common/styles.css
@@ -24,15 +24,26 @@ body {
     min-width: 900px;
 }
 
+html {
+    overflow-y: scroll;
+}
+
 tbody {
     height: 100%;
+}
+
+.main_wrap {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 1100px;
+    margin: auto;
 }
 
 .container {
     display: flex;
     flex-direction: column;
     height: 100%;
-    overflow-y: scroll;
 }
 
 main {
