--- a/teamcostco/src/main/resources/templates/index.html
+++ b/teamcostco/src/main/resources/templates/index.html
@@ -28,6 +28,7 @@
         </main>
     </div>
     <script th:src="@{/js/common/header.js}"></script>
+    <script th:src="@{/js/component/search.js(t=${#calendars.format(#calendars.createNow(), 'yyyyMMddHHmmss')})}"></script>
     <th:block th:if="${jsFiles != null}">
         <th:block th:each="jsFile : ${jsFiles}">
             <script th:src="@{${jsFile}}"></script>
