--- a/teamcostco/src/main/resources/templates/component/category_header_bar.html
+++ b/teamcostco/src/main/resources/templates/component/category_header_bar.html
@@ -3,14 +3,14 @@
     menu
   </span>
   <button class="category_button">Menu</button>
-  <div class="category_container">
+  <!-- <div class="category_container">
     <div class="large_category_container">
       <div class="large_category_wrapper">
-        <div th:each="i : ${#numbers.sequence(1, 30)}" class="large_category">
+        <div th:each="i : ${#numbers.sequence(1, 10)}" class="large_category">
           <div class="large_category-title" th:text="'large_category ' + ${i}"></div>
           <div class="medium_category_container">
             <div class="medium_category_wrapper">
-              <div th:each="j : ${#numbers.sequence(1, 20)}" class="medium_category">
+              <div th:each="j : ${#numbers.sequence(1, 10)}" class="medium_category">
                 <div class="medium_category-title" th:text="'medium_category ' + ${i} +  '-' + ${j}"></div>
                 <div class="small_category_container">
                   <div class="small_category_wrapper">
@@ -33,4 +33,5 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
+</div>
