--- a/teamcostco/src/main/resources/templates/index.html
+++ b/teamcostco/src/main/resources/templates/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/common/styles.css">
     <link rel="stylesheet" href="/css/component/category_header_bar.css">
     <link rel="stylesheet" th:href="@{/css/common/header.css}">
+    <link rel="stylesheet" th:href="@{/css/common/footer.css}">
     <script th:src="@{/js/component/category_header_bar.js}"></script>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <th:block th:if="${cssFiles != null}">
@@ -34,6 +35,7 @@
             <script th:src="@{${jsFile}}"></script>
         </th:block>
     </th:block>
+    <footer th:replace="~{/common/footer}"></footer>
 </body>
 
 </html>
