--- a/teamcostco/src/main/resources/templates/common/header.html
+++ b/teamcostco/src/main/resources/templates/common/header.html
@@ -19,7 +19,7 @@
                 <span id="person" class="material-symbols-outlined">
                     person
                 </span>
-                <span class="material-symbols-outlined">
+                <span id="cart" class="material-symbols-outlined">
                     shopping_cart
                 </span>
             </div>
