--- a/teamcostco/src/main/resources/templates/cart/cart_list.html
+++ b/teamcostco/src/main/resources/templates/cart/cart_list.html
@@ -4,11 +4,12 @@
         <h1>장바구니</h1>
         <div class="cart_container">
             <div class="cart_list">
-                <div class="cart_item" th:each="item: ${items}">
+                <div class="cart_item" th:id="${'cart_item_' + item.cart_id}" th:each="item: ${items}"
+                th:data-item-price="${item.discountedPrice}" th:data-product-code="${item.product_code}">
                     <div class="checkbox_area">
-                        <input type="checkbox" class="item_checkbox" th:id="${item.cart_id}"
-                            th:checked="${item.checked != null && item.checked == 'Y'}">
-                            <button class="remove_btn">삭제</button>
+                        <input type="checkbox" class="item_checkbox" th:id="${item.cart_id}" th:data-product-code="${item.product_code}"
+                        th:checked="${item.checked != null and item.checked.toString().equals('Y')}">                    
+                        <button class="remove_btn" th:data-cart-id="${item.cart_id}">X</button>
                     </div>
                     <div class="item_details">
                         <div class="item_image_area">
@@ -26,26 +27,48 @@
                             </div>
                             <div class="item_row">
                                 <p class="item_label" th:text="'상품가격'"></p>
-                                <p class="item_value" th:text="${#numbers.formatInteger(item.discountedPrice, 0, 'COMMA') + '원'}"></p>
+                                <p class="item_value"
+                                    th:text="${#numbers.formatInteger(item.discountedPrice, 0, 'COMMA') + ' 원'}"></p>
                             </div>
                         </div>
-                        <div class="quantity_controls">
+                        <div class="quantity_controls" th:data-item-id="${item.cart_id}">
                             <button class="decrease_btn">-</button>
-                            <input type="number" value="1" min="1" class="quantity_input">
+                            <input type="text" th:value="${item.product_count}" min="1" class="quantity_input">
                             <button class="increase_btn">+</button>
                         </div>
                     </div>
+                    <div class="item_summary">
+                        <div class="item_quantity">
+                            <p>수량:</p>
+                            <p class="quantity" th:id="${'product_count_' + item.cart_id}"
+                                th:text="${item.product_count}"></p>
+                        </div>
+                        <p class="item_total_price" th:id="${'product_total_price_' + item.cart_id}"
+                            th:text="${#numbers.formatInteger(item.product_count * item.discountedPrice,0,'COMMA') + ' 원'}">
+                        </p>
+                    </div>
                 </div>
-
             </div>
-            <div class="selected_items">
-                <h2>선택한 상품 정보</h2>
-                <div class="item_info"></div>
+            <div class="total_summary">
+                <h4>주문 정보</h4>
+                <div class="item_row">
+                    <p class="item_label">총 수량</p>
+                    <p class="item_value" id="total_quantity">0 개</p>
+                </div>
+                <div class="item_row">
+                    <p class="item_label">총 상품금액</p>
+                    <p class="item_value" id="total_product_amount">0 원</p>
+                </div>
+                <div class="item_row">
+                    <p class="item_label">배송비</p>
+                    <p class="item_value" id="total_shipping_fee">0 원</p>
+                </div>
+                <div class="item_row">
+                    <p class="item_label">총 주문금액</p>
+                    <p class="item_value" id="total_order_amount">0 원</p>
+                </div>
             </div>
-        </div>
-        <div class="total_price">
-            <h2>총 가격: <span id="totalPrice">30,000원</span></h2>
-            <button class="checkout_btn">결제하기</button>
+            
         </div>
     </div>
 </div>
