--- a/teamcostco/src/main/resources/templates/index.html
+++ b/teamcostco/src/main/resources/templates/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/fonts/Material_Symbols_Outlined.woff2">
     <link rel="stylesheet" href="/css/common/styles.css">
     <link rel="stylesheet" href="/css/component/category_header_bar.css">
+    <link rel="stylesheet" href="/css/component/sidebar.css">
     <link rel="stylesheet" th:href="@{/css/common/header.css}">
     <link rel="stylesheet" th:href="@{/css/common/footer.css}">
     <script th:src="@{/js/component/category_header_bar.js}"></script>
